# pygrind

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pygrind.spec  pyproject.toml  pytrainer.spec
docs/: BUILD-WINDOWS-INSTALLER.md  INSTALL.md
docs/design/: architecture.md  prd.md
docs/design/brainstorm/: python-competition-trainer.md
docs/develop/plan/: E1-S01-init-project-structure.md  E1-S02-configure-dev-tooling.md  E1-S03-define-core-data-models.md  E1-S04-create-test-fixtures.md  (+37 more)
installer/linux/: build_appimage.sh  pygrind.desktop  pytrainer.desktop
installer/macos/: build_dmg.sh
installer/windows/: embed_python.py  pygrind.iss  pytrainer.iss
scripts/: build.py
src/pygrind/: __init__.py  __main__.py  app.py  paths.py  settings.py
src/pytrainer/: __init__.py  __main__.py  app.py  paths.py
tests/: conftest.py  test_dev_tooling.py  test_fixtures.py  test_linux_distribution.py  test_macos_distribution.py  test_packaging.py  test_project_structure.py  test_windows_installer.py
tests/core/: test_analytics.py  test_display.py  test_loader.py  test_models.py  test_pipeline.py  test_runner.py  test_scanner.py  test_scorer.py  test_selector.py  test_session_mgr.py  test_timeout.py  test_timer_controller.py  test_validator.py
tests/exercises/: test_tier1_easy.py  test_tier2_basic.py  test_tier3_medium.py  test_tier4_hard.py  test_tier5_expert.py
tests/storage/: test_autosave.py  test_database.py
tests/ui/: test_app_shell.py  test_competition.py  test_editor.py  test_flagging.py  test_hints.py  test_main_menu.py  test_output_panel.py  test_problem_list.py  test_problem_panel.py  test_results_analytics.py  test_results_screen.py  test_session_config.py  test_solution_viewer.py  test_submit_flow.py  test_timer_widget.py
(+129 files in other folders)
